# poona-adherents-update

./: .funcignore  .gitignore  CLAUDE.md  func.yaml  pyproject.toml
.github/workflows/: image-build.yml  terraform.yml
function/: func.py
terraform/: apis.tf  billing.tf  github_actions.tf  iam.tf  outputs.tf  providers.tf  secrets.tf  service_account.tf  storage.tf  variables.tf
tests/: test_func.py
